--- a/data.yaml
+++ b/data.yaml
@@ -1257,6 +1257,7 @@ library:
   support:
     clang:
     - since: C++20
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS)'
       value: 201907
     gcc:
     - since: C++20
@@ -1306,6 +1307,7 @@ library:
   support:
     clang:
     - since: C++20
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS)'
       value: 201907
     gcc: null
     msvc:
@@ -1360,6 +1362,7 @@ library:
   support:
     clang:
     - since: C++20
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS)'
       value: 201907
     gcc: null
     msvc:
@@ -1404,7 +1407,6 @@ library:
     gcc: null
     msvc:
     - since: C++20
-      depends: '!defined(__EDG__)'
       value: 201806
 - name: __cpp_lib_bitops
   header_list: bit
@@ -1792,6 +1794,9 @@ library:
     - since: C++20
       depends: defined(__cpp_impl_coroutine)
       value: 197000
+    - since: C++20
+      depends: 'defined(__cpp_impl_coroutine) && __cpp_impl_coroutine >= 201902'
+      value: 201902
 - name: __cpp_lib_destroying_delete
   header_list: new
   rows:
