--- a/data.yaml
+++ b/data.yaml
@@ -1599,7 +1599,7 @@ library:
       value: 202002
     msvc:
     - since: C++20
-      depends: defined(__cpp_concepts) && __cpp_concepts > 201507
+      depends: '!defined(__EDG__) || defined(__INTELLISENSE__)'
       value: 201907
 - name: __cpp_lib_constexpr_algorithms
   header_list: algorithm
@@ -2937,7 +2937,10 @@ library:
     - since: C++20
       depends: __cpp_impl_three_way_comparison >= 201907 && __cpp_lib_concepts
       value: 201907
-    msvc: null
+    msvc:
+    - since: C++20
+      depends: defined(__cpp_lib_concepts)
+      value: 201711
 - name: __cpp_lib_to_address
   header_list: memory
   rows:
