--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -158,7 +158,7 @@ jobs:
                   curl.exe -L -o llvm.exe `
                     https://github.com/llvm/llvm-project/releases/download/llvmorg-11.0.0/LLVM-11.0.0-win64.exe
                   7z x llvm.exe -oLLVM
-                  echo "$PWD\LLVM\bin" >> $GITHUB_PATH
+                  echo "$PWD\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
             - name: Test MSVC STL with Clang
               run: python tools/do_test.py msvc library --verbose
