--- a/data.yaml
+++ b/data.yaml
@@ -363,7 +363,9 @@ language:
     gcc:
     - since: C++20
       value: 201907
-    msvc: null
+    msvc:
+    - since: C++20
+      value: 201907
 - name: __cpp_constexpr_in_decltype
   rows:
   - value: 201711
