libstdc++ defines __cpp_lib_latch and __cpp_lib_semaphore

--- a/data.yaml
+++ b/data.yaml
@@ -2303,7 +2303,9 @@ library:
     cppreference-description: '{{ltt|cpp/thread/latch|std::latch}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++20
+      value: 201907
     msvc:
     - since: C++20
       value: 201907
@@ -2718,7 +2720,9 @@ library:
       {{tt|std::binary_semaphore}}]]'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++20
+      value: 201907
     msvc:
     - since: C++20
       value: 201907
