--- a/data.yaml
+++ b/data.yaml
@@ -1703,7 +1703,9 @@ library:
     cppreference-description: Constexpr for [[cpp/algorithm#Numeric_operations|<numeric>
       algorithms]]
   support:
-    clang: null
+    clang:
+    - since: C++20
+      value: 201911
     gcc:
     - since: C++20
       value: 201911
