--- a/data.yaml
+++ b/data.yaml
@@ -1368,7 +1368,10 @@ library:
     - since: C++20
       depends: '!defined(_LIBCPP_HAS_NO_THREADS)'
       value: 201907
-    gcc: null
+    gcc:
+    - since: C++20
+      depends: 'defined(_GLIBCXX_HAS_GTHREADS) || defined(_GLIBCXX_HAVE_LINUX_FUTEX)'
+      value: 201907
     msvc:
     - since: C++20
       value: 201907
@@ -1408,7 +1411,10 @@ library:
     cppreference-description: '{{ltt|cpp/numeric/bit_cast|std::bit_cast}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++20
+      depends: __has_builtin(__builtin_bit_cast)
+      value: 201806
     msvc:
     - since: C++20
       value: 201806
@@ -2309,6 +2315,7 @@ library:
     clang: null
     gcc:
     - since: C++20
+      depends: __cpp_lib_atomic_wait
       value: 201907
     msvc:
     - since: C++20
@@ -2726,6 +2733,7 @@ library:
     clang: null
     gcc:
     - since: C++20
+      depends: __cpp_lib_atomic_wait
       value: 201907
     msvc:
     - since: C++20
@@ -2835,7 +2843,10 @@ library:
     cppreference-description: Source-code information capture ({{lc|std::source_location}})
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++20
+      depends: __has_builtin(__builtin_source_location)
+      value: 201907
     msvc: null
 - name: __cpp_lib_span
   header_list: span
