MSVC STL defines __cpp_lib_constexpr_dynamic_alloc

--- a/data.yaml
+++ b/data.yaml
@@ -1664,7 +1664,10 @@ library:
     gcc:
     - since: C++20
       value: 201907
-    msvc: null
+    msvc:
+    - since: C++20
+      depends: 'defined(__cpp_constexpr_dynamic_alloc) && defined(__clang__)'
+      value: 201907
 - name: __cpp_lib_constexpr_functional
   header_list: functional
   rows:
