--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -104,7 +104,7 @@ jobs:
 
             - name: Test libc++ with GCC
               run: python tools/do_test.py clang library --verbose
-                    --cc gcc --std C++11 C++14 C++17 C++20
+                    --cc gcc --std C++11 C++14 C++17 C++20 C++23
                     --extra-args -fno-diagnostics-show-caret
                      -ftrack-macro-expansion=0 -stdlib=libc++
 
