--- a/data.yaml
+++ b/data.yaml
@@ -2992,7 +2992,9 @@ library:
     clang:
     - since: C++23
       value: 202011
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202011
     msvc: null
 - name: __cpp_lib_string_udls
   header_list: string
