--- a/data.yaml
+++ b/data.yaml
@@ -949,7 +949,9 @@ language:
       {{tt|size_t}} and its signed version]]'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202011
     msvc: null
 - name: __cpp_sized_deallocation
   rows:
