--- a/data.yaml
+++ b/data.yaml
@@ -1764,7 +1764,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++20
+      depends: defined(__cpp_constexpr_dynamic_alloc) && !defined(__clang__)
+      value: 201907
 - name: __cpp_lib_constexpr_string_view
   header_list: string_view
   rows:
@@ -2914,7 +2917,10 @@ library:
     - since: C++20
       depends: __has_builtin(__builtin_source_location)
       value: 201907
-    msvc: null
+    msvc:
+    - since: C++20
+      depends: defined(__cpp_consteval)
+      value: 201907
 - name: __cpp_lib_span
   header_list: span
   rows:
@@ -3253,7 +3259,7 @@ library:
     msvc:
     - value: 201411
 - name: __cpp_lib_unwrap_ref
-  header_list: functional
+  header_list: type_traits
   rows:
   - value: 201811
     papers: P0318R1 LWG3348
